--- a/stage1-2.html
+++ b/stage1-2.html
@@ -40,7 +40,7 @@
         <img src="./img/icon/icon_hint.svg" alt="">
       </div>
       <div class="img-bottom-hint">
-        <img src="./img/bg/bg_hinticon.svg" alt="">
+        <img src="./img/icon/bg_hinticon.svg" alt="">
       </div>
       <div class="box-description">
         <p>향해일지에 적힌 시간을 날짜 순서대로</p>
