--- a/stage4-1.html
+++ b/stage4-1.html
@@ -33,7 +33,7 @@
         <img src="./img/icon/icon_hint.svg" alt="">
       </div>
       <div class="img-bottom-hint">
-        <img src="./img/bg/bg_hinticon.svg" alt="">
+        <img src="./img/icon/bg_hinticon.svg" alt="">
       </div>
       <div class="box-description">
         <p>흰색책은 자음 ㅇ, 검은색 책은 모음중 ㅡ,</p>
