--- a/stage6-1.html
+++ b/stage6-1.html
@@ -34,7 +34,7 @@
         <img src="./img/icon/icon_hint.svg" alt="">
       </div>
       <div class="img-bottom-hint">
-        <img src="./img/bg/bg_hinticon.svg" alt="">
+        <img src="./img/icon/bg_hinticon.svg" alt="">
       </div>
       <div class="box-description box-center">
         <p>정답은 산호입니다.</p>
