--- a/stage7-2.html
+++ b/stage7-2.html
@@ -33,7 +33,7 @@
         <img src="./img/icon/icon_hint.svg" alt="">
       </div>
       <div class="img-bottom-hint">
-        <img src="./img/bg/bg_hinticon.svg" alt="">
+        <img src="./img/icon/bg_hinticon.svg" alt="">
       </div>
       <div class="box-description box-center">
         <p>고기를 천지인 키패드에 입력하여</p>
