--- a/stage8-2.html
+++ b/stage8-2.html
@@ -34,7 +34,7 @@
         <img src="./img/icon/icon_hint.svg" alt="">
       </div>
       <div class="img-bottom-hint">
-        <img src="./img/bg/bg_hinticon.svg" alt="">
+        <img src="./img/icon/bg_hinticon.svg" alt="">
       </div>
       <div class="box-description box-center">
         <p>알파벳순서대로 경로에 있는 방</p>
