--- a/start.html
+++ b/start.html
@@ -23,7 +23,7 @@
   <!-- background bottom image -->
   <div class="bg-container">
     <div class="bg-box">
-      <img src="./img/bg1_bottom.svg">
+      <img src="./img/bg/bg_bottom1.svg">
     </div>
   </div>
 
@@ -34,9 +34,9 @@
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
-    <img class='logo-image' src="./img/logo.svg" alt="">
+    <img class='logo-image' src="./img/start/logo.svg" alt="">
     <div class='shade-text-box'>
-      <img src="./img/gamestart.png" alt="">
+      <img src="./img/start/gamestart.png" alt="">
     </div>
     <img id="startBtn" class='start-button' src="./img/icon/icon_play.svg" alt="">
   </div>
