--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Main page of 루비팡의 모험
   <!-- background bottom image -->
   <div class="bg-container">
     <div class="bg-box">
-      <img src="./img/bg1_bottom.svg">
+      <img src="./img/bg/bg_bottom1.svg">
     </div>
   </div>
 
@@ -41,7 +41,7 @@ Main page of 루비팡의 모험
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
-    <img class='logo-image' src="./img/logo.svg" alt="">
+    <img class='logo-image' src="./img/start/logo.svg" alt="">
     <div class='shade-text-box'>
       <p>코드를 입력하세요</p>
     </div>
