--- a/stage2-2.html
+++ b/stage2-2.html
@@ -33,7 +33,7 @@
         <img src="./img/icon/icon_hint.svg" alt="">
       </div>
       <div class="img-bottom-hint">
-        <img src="./img/bg/bg_hinticon.svg" alt="">
+        <img src="./img/icon/bg_hinticon.svg" alt="">
       </div>
       <div class="box-description box-center">
         <p>별주부전엔 거북이가 아닌</p>
