--- a/stage1-1.html
+++ b/stage1-1.html
@@ -37,7 +37,7 @@
     </div>
     <img class='stage-img sml-shadow' src="./img/stage1/sta-1-1.png" alt="">
     <div class="answer-box">
-      <a onclick="setTimeout(function() {window.location.href='stage1-2.html';},600);">
+      <a onclick="setTimeout(function() {window.location.href='stage1-2';},600);">
         <img id="nextPage" class='next-button' src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
