--- a/stage2-1.html
+++ b/stage2-1.html
@@ -36,7 +36,7 @@
       <p>용궁행 급행열차를 타야겠다.</p>
     </div>
     <div class="answer-box">
-      <a class='next-button' href="stage2-2.html">
+      <a class='next-button' href="stage2-2">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
