--- a/stage3-1.html
+++ b/stage3-1.html
@@ -39,7 +39,7 @@
     </div>
     <img class='stage-img sml-shadow' src="./img/stage3/sta-3-1.png" alt="">
     <div class="answer-box">
-      <a class='next-button' href="stage3-2.html">
+      <a class='next-button' href="stage3-2">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
