--- a/stage7-1.html
+++ b/stage7-1.html
@@ -43,7 +43,7 @@
       <p class="sml-font" style='color: #00FFFF;'>문제를 풀어보세요!</p>
     </div>
     <div class="answer-box">
-      <a class='next-button' href="stage7-2.html">
+      <a class='next-button' href="stage7-2">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
