--- a/stage9-1.html
+++ b/stage9-1.html
@@ -37,7 +37,7 @@
     </div>
     <img class='stage-img sml-shadow' src="./img/stage9/sta-9-1.png" alt="">
     <div class="answer-box">
-      <a class='next-button' href="stage9-2.html">
+      <a class='next-button' href="stage9-2">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
