--- a/stage9-2.html
+++ b/stage9-2.html
@@ -36,7 +36,7 @@
     </div>
     <img class='stage-img sml-shadow' src="./img/stage9/sta-9-2.png" alt="">
     <div class="answer-box">
-      <a class='next-button' href="stage9-3.html">
+      <a class='next-button' href="stage9-3">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
