--- a/stage9-3.html
+++ b/stage9-3.html
@@ -39,7 +39,7 @@
     <img class='stage-img-sml' src="./img/stage9/sta-9-3.png" alt="">
     <!-- two ending buttons -->
     <div class="end-buttons">
-      <a href="stage-end1.html">
+      <a href="stage-end1">
         <div class="end-container">
           <img class="img-button" src="./img/stage_end/ending-btn.png">
           <div class='end-button'><span style='color: #cc66ff'>엔딩1:</span>생명의 정수를 물에 뿌린다.</div>
@@ -47,7 +47,7 @@
       </a>
     </div>
     <div class="end-buttons">
-      <a href="stage-end2.html">
+      <a href="stage-end2">
         <div class="end-container">
           <img class="img-button" src="./img/stage_end/ending-btn.png">
           <div class='end-button'><span style='color: #cc66ff'>엔딩2:</span>훔친 생명의 정수를 엄마 토끼에게 가져간다</div>
