--- a/stage8-1.html
+++ b/stage8-1.html
@@ -41,7 +41,7 @@
       <p>장소로 이동하자!</p>
     </div>
     <div class="answer-box">
-      <a class='next-button' href="stage8-2.html">
+      <a class='next-button' href="stage8-2">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
